test/should-succeed/ex-falso.imp
(axiom {> 1 2})

(check {= 5 10})

(begin
  (assert {init x})
  (x := 5)
  (assert {= x 10}))
