test/should-fail/logical-error.imp
(check (= (+ 2 2) 5))
